fix hover z-index

--- a/menu-customizer.css
+++ b/menu-customizer.css
@@ -584,6 +584,10 @@
 	margin-top: -1px;
 }
 
+#available-menu-items .menu-item-handle:hover {
+	z-index: 1;
+}
+
 #available-menu-items .item-title h4 {
 	padding: 0 0 5px;
 	font-size: 14px;
